# MIPS-hs

./: Alu.hi  CHANGELOG.md  MIPS-hs.cabal  Operations.hi  README.md  Util.hi  alu.hs  mips.hi  mips.hs  operations.hs  util.hs
app/: Main.hs
app/Mips/: alu.hs  cpu.hs  memory.hs  operations.hs  util.hs
lib/Mips/: alu.hs  cpu.hs  memory.hs  operations.hs
src/: memory.hs
test/: tests.hs
