cabal-version:      2.4
name:               MIPS-hs
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Kasdejong
maintainer:         k.j2.de.jong@student.vu.nl

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

library MIPS
    exposed-modules: CPU, Memory
    build-depends: base ^>=4.16.4.0, binary, containers
    other-modules: Alu, Operations, Util
    hs-source-dirs: lib/Mips
    default-language: Haskell2010

executable MIPS-hs
    main-is:          Main.hs
    build-depends:    base ^>=4.16.4.0, MIPS
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite test
    type: exitcode-stdio-1.0
    main-is: tests.hs
    hs-source-dirs: test
    build-depends: base ^>=4.16.4.0, HUnit, MIPS, containers, binary
    default-language: Haskell2010